:wrench: Fix hiden channels overflow.

--- a/client/src/app/components/header/_header.scss
+++ b/client/src/app/components/header/_header.scss
@@ -46,6 +46,14 @@ $color-chanel-hover: #fff8ff;;
     }
   }
 
+  &__item_hidden-chanels {
+    position: relative;
+
+    @include only-screen(414px) {
+      position: initial;
+    }
+  }
+
   &__button {
     @include noselect();
     -webkit-apperance: none;
@@ -185,7 +193,7 @@ $color-chanel-hover: #fff8ff;;
   overflow: auto;
   padding: 16px;
   position: absolute;
-  right: 16px;
+  right: 0;
   top: 35px;
   width: 232px;
 
