--- a/news/static/css/common.css
+++ b/news/static/css/common.css
@@ -20,8 +20,7 @@ ul {
 .container {
   margin: 0 auto;
   max-width: 1200px;
-  padding: 0 16px;
-  position: relative; }
+  padding: 0 16px; }
 
 .project-type__img {
   animation: flip 10000ms infinite;
